Add comprehensive email reporting and improve GoldAPI handling Features added: - Email reporter module with detailed HTML and text reports - Complete product and variant change tracking - Unlimited product reporting (no limits) - Error-specific reporting with product-level details - Email sent after every run (success or failure) - Critical error email notifications Email report includes: - Metal rates used - Summary statistics - Complete list of ALL products modified - Detailed variant changes with old/new prices - All errors encountered with specific products affected - Formatted HTML email with tables and status indicators - Plain text fallback version GoldAPI improvements: - Enhanced logging for debugging - Better error messages showing API response - Validates both price_gram_24k and price fields - Detailed logging of calculations Configuration: - Added 3 new GitHub Secrets required:   * SENDER_EMAIL - Email to send from   * SENDER_PASSWORD - Email app password   * RECIPIENT_EMAIL - Email to send reports to - Optional SMTP_SERVER and SMTP_PORT variables

--- a/.github/workflows/auto-price-update.yml
+++ b/.github/workflows/auto-price-update.yml
@@ -33,6 +33,11 @@ jobs:
           SHOPIFY_SHOP_URL: ${{ secrets.SHOPIFY_SHOP_URL }}
           SHOPIFY_ACCESS_TOKEN: ${{ secrets.SHOPIFY_ACCESS_TOKEN }}
           SHOPIFY_THEME_ID: ${{ secrets.SHOPIFY_THEME_ID }}
+          SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
+          SENDER_PASSWORD: ${{ secrets.SENDER_PASSWORD }}
+          RECIPIENT_EMAIL: ${{ secrets.RECIPIENT_EMAIL }}
+          SMTP_SERVER: ${{ vars.SMTP_SERVER || 'smtp.gmail.com' }}
+          SMTP_PORT: ${{ vars.SMTP_PORT || '587' }}
           CURRENCY: ${{ vars.CURRENCY || 'INR' }}
         run: |
           cd scripts
