Add email reporting to manual price updater

--- a/.github/workflows/manual-price-update.yml
+++ b/.github/workflows/manual-price-update.yml
@@ -69,6 +69,12 @@ jobs:
           fi
 
       - name: Run manual price updater
+        env:
+          SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
+          SENDER_PASSWORD: ${{ secrets.SENDER_PASSWORD }}
+          RECIPIENT_EMAIL: ${{ secrets.RECIPIENT_EMAIL }}
+          SMTP_SERVER: ${{ vars.SMTP_SERVER || 'smtp.gmail.com' }}
+          SMTP_PORT: ${{ vars.SMTP_PORT || '587' }}
         working-directory: scripts
         run: |
           # Build command with required arguments
